# esgea

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pages.yml
src/: index.html  lib.rs  server.rs
wasm-app/: Cargo.toml
wasm-app/src/: lib.rs
web/: index.html
