[package]
name = "esgea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "esgead"
path = "src/server.rs"

[dependencies]
petgraph = { version = "0.6", features = ["serde-1"] }
actix-web = "4"
actix-session = { version = "0.6", features = ["cookie-session"] }
env_logger = "0.9"
parking_lot = "0.12"
futures-util = "0.3"
rand = "0.8"
serde = {version =  "1.0.136", features = ["derive" ]}
serde_json = "*"
tokio = { version = "*", features = ["process"] }
