[package]
name = "esgea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "esgead"
path = "src/server.rs"

[dependencies]
actix = { version = "0.13.0", optional = true }
petgraph = { version = "0.6", features = ["serde-1"] }
actix-web = { version = "4.3.1", optional = true }
actix-session = { version = "0.7", features = ["cookie-session"], optional = true }
actix-web-actors = { version = "4.2.0", optional = true }
env_logger = { version = "0.10", optional = true }
parking_lot = "0.12"
futures-util = "0.3"
rand = "0.8"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["process"], optional = true }
ascent = "0.4"
vecmap-rs = { version = "0.1.10", features = ["serde"] }

[features]
default = ["server"]
server = [
    "actix",
    "actix-session",
    "actix-web",
    "actix-web-actors",
    "env_logger",
    "tokio",
]