[package]
name = "esgea_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
futures-util = { version = "0.3", features = ["io", "std"] }
serde_json = "1.0"
iroh = { version = "0.92", default-features = false }
base64 = "0.21"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "Event",
    "HtmlButtonElement",
    "HtmlDivElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlOptionElement",
    "HtmlUListElement",
    "Node",
    "console",
    "Window"
] }
esgea = { path = "..", default-features = false }
getrandom = { version = "0.3", features = ["wasm_js"] }
